refactor: remove unused parameters from NPC systems and helper methods