@@ -1,23 +1,11 @@
 package com.cookieukw.SimTale;
 
 
-import com.cookieukw.SimTale.core.Profession;
-import com.cookieukw.SimTale.logic.PlayerGenderPage;
-import com.cookieukw.SimTale.systems.FarmPostRegistry;
-import com.cookieukw.SimTale.systems.FarmlandRegistry;
-import com.cookieukw.SimTale.systems.NPCSleepHelper;
-import java.util.Set;
 import com.cookieukw.SimTale.core.SimNPCComponent;
 import com.cookieukw.SimTale.core.Mood;
-import com.cookieukw.SimTale.core.SimNPCFactory;
 import com.cookieukw.SimTale.core.ThoughtType;
 import com.cookieukw.SimTale.systems.EmoteBubbleSystem;
 import com.cookieukw.SimTale.db.SimNPCPersistence;
-import com.cookieukw.SimTale.logic.NPCInteractionPage;
-import com.cookieukw.SimTale.logic.PlayerPregnancyPage;
-import com.cookieukw.SimTale.logic.SimBedDebugPage;
-import com.cookieukw.SimTale.logic.SimChestDebugPage;
-import com.cookieukw.SimTale.systems.BedWorldBootstrap;
 import com.hypixel.hytale.component.Ref;
 import com.hypixel.hytale.component.Store;
 import org.joml.Vector3d;
@@ -28,79 +16,24 @@ import com.hypixel.hytale.server.core.command.system.arguments.system.RequiredAr
 import com.hypixel.hytale.server.core.command.system.arguments.system.OptionalArg;
 import com.hypixel.hytale.server.core.command.system.arguments.types.ArgTypes;
 import com.hypixel.hytale.server.core.command.system.basecommands.AbstractPlayerCommand;
-import com.hypixel.hytale.server.core.entity.entities.Player;
 import com.hypixel.hytale.server.core.modules.entity.component.TransformComponent;
 import com.hypixel.hytale.server.core.universe.PlayerRef;
 import com.hypixel.hytale.server.core.universe.world.World;
 import com.hypixel.hytale.server.core.universe.world.storage.EntityStore;
-import com.hypixel.hytale.component.RemoveReason;
-import com.hypixel.hytale.server.core.inventory.InventoryComponent;
-import com.cookie.caskara.Caskara;
-import com.hypixel.hytale.server.core.inventory.container.CombinedItemContainer;
-import com.hypixel.hytale.codec.Codec;
-import com.hypixel.hytale.server.core.inventory.container.ItemContainer;
-import com.hypixel.hytale.server.core.inventory.ItemStack;
-import org.joml.Vector3i;
+
 import javax.annotation.Nonnull;
 import java.util.List;
-import java.util.Map;
 import java.util.ArrayList;
-import com.cookieukw.SimTale.systems.PlumbobSystem;
-import com.cookieukw.SimTale.db.SimBedData;
-import com.cookieukw.SimTale.db.SimNPCData;
-import com.cookieukw.SimTale.ai.AiConfig;
-import com.cookieukw.SimTale.ai.AiConfigManager;
-import com.cookieukw.SimTale.ai.RoutineAIComponent;
-import com.cookieukw.SimTale.core.Gender;
-import com.cookieukw.SimTale.core.Relationship;
-import com.cookieukw.SimTale.core.RelationshipStatus;
-import com.cookieukw.SimTale.core.FamilySystem;
-import com.cookieukw.SimTale.core.NeedsHelper;
-import com.cookieukw.SimTale.core.SimPlayerComponent;
-import java.util.UUID;
-import java.util.Map.Entry;
-import java.util.concurrent.CompletableFuture;
+import java.util.Objects;
 
-import com.cookieukw.SimTale.core.lifecycle.LifecycleManager;
-import com.cookieukw.SimTale.core.HouseBlockPos;
-import com.cookieukw.SimTale.core.HouseData;
-import com.cookieukw.SimTale.systems.HouseManager;
-import com.cookieukw.SimTale.systems.BedRegistry;
-import com.cookieukw.SimTale.systems.ChestRegistry;
-import com.cookieukw.SimTale.systems.ChairRegistry;
-import com.cookieukw.SimTale.systems.FurnitureAnchorHelper;
-import com.cookieukw.SimTale.core.lifecycle.GrowthComponent;
-import com.cookieukw.SimTale.core.lifecycle.GrowthStage;
-import com.cookieukw.SimTale.core.lifecycle.PregnancyComponent;
-import com.cookieukw.SimTale.core.lifecycle.BabyCareData;
-import com.cookieukw.SimTale.core.lifecycle.BabyCareManager;
-import com.cookieukw.SimTale.core.lifecycle.LifecycleState;
-import com.cookieukw.SimTale.db.SimPlayerPersistence;
-import com.hypixel.hytale.server.core.entity.Frozen;
-import com.cookieukw.SimTale.core.SimLog;
+import com.cookieukw.SimTale.ai.RoutineAIComponent;
+
 import com.cookieukw.SimTale.systems.NPCMovementHelper;
-import com.cookieukw.SimTale.systems.NPCWorkHelper;
-import com.cookieukw.SimTale.systems.ConstructionPreviewManager;
-import com.cookieukw.SimTale.systems.SimTaleEventHandler;
-import com.cookieukw.SimTale.core.ConstructionSiteComponent;
-import com.cookieukw.SimTale.core.Rotation4;
-import com.hypixel.hytale.builtin.mounts.MountedComponent;
-import com.hypixel.hytale.server.npc.role.support.StateSupport;
 import com.hypixel.hytale.server.npc.entities.NPCEntity;
-import com.hypixel.hytale.server.core.modules.entity.component.ActiveAnimationComponent;
-import com.hypixel.hytale.server.core.entity.movement.MovementStatesComponent;
 import com.cookieukw.SimTale.systems.NPCSocialHelper;
 import com.cookieukw.SimTale.systems.ChildPlayHelper;
 import com.cookieukw.SimTale.systems.SimTaleJuiceHelper;
-import com.hypixel.hytale.logger.HytaleLogger;
 import com.hypixel.hytale.math.vector.Rotation3f;
-import com.hypixel.hytale.protocol.AnimationSlot;
-import com.hypixel.hytale.protocol.MovementStates;
-import com.hypixel.hytale.server.core.entity.AnimationUtils;
-import java.util.Objects;
-
-import com.hypixel.hytale.server.core.asset.type.blocktype.config.BlockType;
-import java.util.LinkedHashMap;
 
 /**
  * Debug/GM subcommands for testing NPC social interactions on demand: forcing a mood, forcing a
@@ -153,7 +86,7 @@ final class SocialTestCommands {
             if (intensityRaw != null && !intensityRaw.isBlank()) {
                 try {
                     int percent = Integer.parseInt(intensityRaw.trim());
-                    intensity = Math.max(0f, Math.min(100f, percent)) / 100f;
+                    intensity = Math.clamp(percent, 0f, 100f) / 100f;
                 } catch (NumberFormatException e) {
                     ctx.sendMessage(Message.raw("Invalid intensity. Use an integer from 0 to 100 (e.g., 75)."));
                     return;
@@ -352,7 +285,7 @@ final class SocialTestCommands {
             ai2.socialTalkTimer = 0;
             ai2.socialTopic = encodedTopic;
 
-            NPCEntity e1 = store.getComponent(ref1, NPCEntity.getComponentType());
+            NPCEntity e1 = store.getComponent(ref1, Objects.requireNonNull(NPCEntity.getComponentType()));
             if (e1 != null) e1.setLeashPoint(new Vector3d(p1.x, p1.y, p1.z));
             NPCEntity e2 = store.getComponent(ref2, NPCEntity.getComponentType());
             if (e2 != null) e2.setLeashPoint(new Vector3d(p2.x, p2.y, p2.z));
